--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^14.3.1",
-    "mongoose": "^5.7.14"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.14",
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.4.1",
+    "twilio": "^3.38.0"
   }
 }
