--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   backend:
-    container_name: backend
+    container_name: server
     restart: always
     build: .
     ports:
@@ -12,7 +12,7 @@ services:
       context: .
       dockerfile: DockerFile
   mongo:
-    container_name: mongo
+    container_name: mongo_container
     image: mongo
     ports:
      - '27017:27017'   
